# Patina

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md
apps/drive_demo/: Main.cpp
apps/juce_demo/: Main.cpp
apps/power_amp_demo/: CMakeLists.txt  Main.cpp
bindings/c/: patina_c.cpp  patina_c.h
bindings/rust/: Cargo.toml  build.rs
bindings/rust/src/: ffi.rs  lib.rs
cmake/: PatinaConfig.cmake.in
docs/: API_REFERENCE.md  ARCHITECTURE.md  COOKBOOK.md
dsp/circuits/bbd/: BbdClock.h  BbdFeedback.h  BbdNoise.h  BbdPipeline.h  BbdSampler.h  BbdStageEmulator.h  BbdTimeController.h
dsp/circuits/compander/: CompanderModule.h  DynamicsSuite.h  EnvelopeFollower.h  NoiseGate.h  TremoloVCA.h
dsp/circuits/delay/: DelayLine.h  OversamplePath.h  PlateReverb.h  SpringReverbModel.h
dsp/circuits/drive/: DiodeClipper.h  FrontEnd.h  InputBuffer.h  InputFilter.h  OutputStage.h
dsp/circuits/dynamics/: FetCompressor.h  PhotoCompressor.h  VariableMuCompressor.h  VcaCompressor.h
dsp/circuits/filters/: AnalogAllPass.h  DiodeLadderFilter.h  LadderFilter.h  OtaSKFilter.h  PassiveLCFilter.h  PhaserStage.h  StateVariableFilter.h  ToneFilter.h  ToneShaper.h
dsp/circuits/mixer/: DryWetMixer.h  DuckingMixer.h  GainUtils.h  Mixer.h
dsp/circuits/modulation/: AnalogLfo.h  EnvelopeGenerator.h  MidSideIron.h  MidSidePrecision.h  ModulationBus.h  RingModulator.h  StereoImage.h
dsp/circuits/power/: AdapterSag.h  BatterySag.h  CapacitorAging.h  PowerSupplySag.h
dsp/circuits/saturation/: PushPullPowerStage.h  TapeSaturation.h  TransformerModel.h  TubePreamp.h  WaveFolder.h
dsp/circuits/vocoder/: VocoderBand.h
dsp/config/: ModdingConfig.h  Presets.h
dsp/constants/: AgingConstants.h  BbdConstants.h  CircuitConstants.h  CompanderConstants.h  DiodeConstants.h  OpAmpConstants.h  PartsConstants.h
dsp/core/: AudioCompat.h  DenormalGuard.h  FastMath.h  Oversampler.h  ProcessSpec.h
dsp/engine/: BbdDelayEngine.h  ChannelStripEngine.h  CompressorEngine.h  DriveEngine.h  EnvelopeGeneratorEngine.h  EqEngine.h  FilterEngine.h  LimiterEngine.h  ModulationEngine.h  ReverbEngine.h  TapeMachineEngine.h
dsp/parts/: AnalogVCO.h  BJT_Primitive.h  DiodePrimitive.h  InductorPrimitive.h  JFET_Primitive.h  OTA_Primitive.h  OpAmpPrimitive.h  PhotocellPrimitive.h  PowerPentode.h  RC_Element.h  TapePrimitive.h  TransformerPrimitive.h  TubeTriode.h  VactrolPrimitive.h  VcaPrimitive.h
examples/: README.md  example_bbd_delay_engine.cpp  example_channel_strip_engine.cpp  example_compressor_engine.cpp  example_drive_engine.cpp  example_envelope_generator.cpp  example_eq_engine.cpp  example_filter_engine.cpp  example_l1_constants.cpp  example_l2_parts.cpp  example_l3_circuits.cpp  example_limiter_engine.cpp  example_modulation_engine.cpp  example_passive_lc_filter.cpp  example_push_pull_power_stage.cpp  example_reverb_engine.cpp  example_ringmod.cpp  example_tape_machine_engine.cpp  example_transient_gate.cpp  example_vco.cpp  example_vco_ringmod.cpp  example_wavefolder.cpp  wav_writer.h
include/: patina.h
tests/: CMakeLists.txt  test_adapter_sag.cpp  test_analog_allpass.cpp  test_analog_presets.cpp  test_analog_vco.cpp  test_audio_compat.cpp  test_audio_transformer.cpp  test_battery_sag.cpp  test_bbd_delay_engine.cpp  test_bbd_sampler.cpp  test_bbd_stage_emulator.cpp  test_capacitor_aging.cpp  test_channel_strip_engine.cpp  test_compander.cpp  test_compressor_engine.cpp  test_delay_core.cpp  test_diode_ladder_filter.cpp  test_drive_engine.cpp  test_drive_module.cpp  test_envelope_follower.cpp  test_envelope_generator.cpp  test_fastmath.cpp  test_feedback_module.cpp  test_fet_compressor.cpp  test_input_lpf.cpp  test_ladder_filter.cpp  test_limiter_engine.cpp  test_mixer.cpp  test_modding_config.cpp  test_modulation_engine.cpp  test_noise_gate.cpp  test_opamp_primitive.cpp  test_ota_sk_filter.cpp  test_output_module.cpp  test_oversampler  test_oversampler.cpp  test_parts_primitives.cpp  test_phaser_stage.cpp  test_photo_compressor.cpp  test_plate_reverb.cpp  (+19 more)
